--- a/src/components/aboutus.css
+++ b/src/components/aboutus.css
@@ -42,6 +42,61 @@
     margin-right: 50px;
     opacity: 1; /* Adjust opacity as needed */
   }
+@media (max-width: 1200px) {
+  .heading {
+    font-size: 50px;
+    width: 280px;
+    height: 90px;
+    line-height: 80px;
+  }
+
+  .description {
+    font-size: 18px;
+    width: 600px;
+    height: 240px;
+    margin-left: 20px;
+  }
+
+  .phototeam {
+    width: 600px;
+    height: 400px;
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 900px) {
+  .about {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+
+  .heading {
+    margin-left: 0;
+    text-align: center;
+    width: 100%;
+    font-size: 40px;
+    height: auto;
+    line-height: 50px;
+  }
+
+  .description {
+    margin-left: 40px;
+    text-align: center;
+    width: 90%;
+    font-size: 16px;
+    height: auto;
+    line-height: 28px;
+  }
+
+  .phototeam {
+    width: 90%;
+    height: auto;
+    margin: 20px 0;
+  }
+}
+
+
 
 
 
