--- a/src/components/forms.css
+++ b/src/components/forms.css
@@ -96,4 +96,35 @@ text-align: left;
   .form-group.inline .form-group {
     width: 48%;
   }
+   @media (max-width: 768px) {
+    form {
+      width: 90%;
+    }
+    
+    .form-group.inline {
+      display: block;
+    }
+    
+    .form-group.inline .form-group {
+      width: 100%;
+    }
+  }
   
+  @media (max-width: 576px) {
+    form {
+      width: 100%;
+    }
+    
+    .contact_form h2 {
+      font-size: 40px;
+      line-height: 60px;
+    }
+  
+    span, .contact_form label {
+      font-size: 24px;
+    }
+  
+    button[type="submit"] {
+      font-size: 24px;
+    }
+  }
