--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,4 +1,4 @@
-/* General navbar styling */
+
 .navbar {
   display: flex;
   align-items: center;
@@ -7,17 +7,17 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-/* Styling for logo in navbar */
+
 .navbar-left .logo {
   width: 146.12px;
   height: 92px;
   padding-left: 17px;
 }
 
-/* Styling for navigation links */
+
 .navbar-right .nav-link {
   margin-left: 60px;
-  font-family: "Jockey One", sans-serif; /* Apply Jockey One font */
+  font-family: "Jockey One", sans-serif; 
   font-size: 32px;
   font-weight: 700;
   line-height: 44.74px;
@@ -32,5 +32,3 @@
   font-weight: 400;
   font-style: normal;
 }
-
-  
